# edgar-research-rag

./: .env.example  .gitignore  README.md  answer.py  app.py  backtest_results.json  ingest.py  main.py  pyproject.toml  research_backtester.py  research_framework.py  xbrl.py
agents/: agent.py  recommend_agent.py  research_agent.py  scanner_agent.py
edgar_db/: chroma.sqlite3
eval/: evaluate.py
models/: research.py
scripts/: seed.py
