[project]
name = "edgar-research-rag"
version = "0.1.0"
description = "RAG-powered investment research over SEC filings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "gradio>=6.15.2",
    "litellm>=1.86.2",
    "lxml>=6.1.1",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "yfinance>=1.4.1",
]

[tool.uv]
required-environments = [ "sys_platform == 'darwin' and platform_machine == 'x86_64'",]
